data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2262.wast
;; 3. **Test Description**: Implement a block with `valtype?`, execute arithmetic operations followed by `br_if` using the result of these operations.    - **Constraint Checked**: Ensures the block's stack operations and condition evaluation on `br_if` work correctly.    - **Relation to Condition Evaluation**: Errors in stack operations or condition checks could lead to incorrect branches.

(assert_invalid
  (module (func (result i32)
    (block (result i32)
      (i32.add
        (i32.const 1)
        (i32.const 2)
      )
      (br_if 0 (i32.eqz (i32.const 0)))
    )
  ))
  "type mismatch"
)